--- a/Html/index.html
+++ b/Html/index.html
@@ -28,6 +28,18 @@
     <!-- html页面展示的内容都写在body中 -->
     <body>
         <h1>HelloHTML 你好</h1>
+        <h2>HelloHTML 你好</h2>
+        <!-- 自闭和标签，br换行 -->
+        <br>
+        <h3>HelloHTML 你好</h3>
+        <!-- 自闭和标签 -->
+        <hr />
+        <!-- a标签超链接 -->
+        <a href="http://www.shsxt.com" target="_blank">上海</a>
+
         <p>这是一个文本标签</p>
+
+        <!-- 图像标签 -->
+        <img src="img/1.jpg" style="width: 300px" title="这是一张图片"></img>
     </body>
 </html>
