--- a/Html/163注册网页.html
+++ b/Html/163注册网页.html
@@ -76,12 +76,34 @@
             height: 44px;
             font-size: 16px;
             text-indent: 0.5em;
-            margin-top: -20px;
+            margin-top: 20px;
+        }
+        .bottom_div {
+            position: absolute;
+            bottom: 300px;
+            left: 340px;
+        }
+        .span_class {
+            font-size: 10px;
+            padding-left: 105px;
+        }
+        .right_span {
+            position: absolute;
+            top: 50px;
+            right: 200px;
+            font-size: 18px;
+        }
+        .left_span {
+            position: absolute;
+            top: 50px;
+            left: 200px;
         }
     </style>
 </head>
 
 <body style="background: #efefef;">
+    <span class="left_span"><span style="font-size: 40px;color: #c1252e;">网易</span>邮箱账号</span>
+    <span class="right_span">已有账号?去<span style="color: #c1252e;">登录</span></span>
     <div class="out_div">
         <form>
             <div class="num_div" align="center">
@@ -90,31 +112,37 @@
             </div>
 
             <div class="reg_div">
-                <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号：</label>
+                <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号：</label>
                 <input class="font_class" placeholder="6-18位数学字母组合">
                 <select style="height: 48px; font-size: 16px;">
                     <option value="">@163.com</option>
                     <option value="">@126.com</option>
                     <option value="">@yeah.com</option>
                 </select>
-                <br><br><br>
-
-                <label>&nbsp;&nbsp;&nbsp;&nbsp;密码：</label>
-                <input class="font_class" placeholder="6到18位数字字母组合"><br><br><br>
+                <br>
+                <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;密码：</label>
+                <input class="font_class" placeholder="6到16位密码，区分大小写"><br>
 
                 <label>确认密码：</label>
-                <input class="font_class" placeholder="6到18位数字字母组合"><br><br><br>
+                <input class="font_class" placeholder="再次确认密码"><br><br>
 
                 <label>&nbsp;&nbsp;&nbsp;&nbsp;验证码：</label>
-                <input style="font-size: 14px;height: 44px; background: #f7f9fa;width: 200px;text-align: center;border: 1px solid #f7f9fa;" value='请依次点击"小""宝""贝"'><br><br><br>
+                <input style="font-size: 14px;height: 44px; background: #f7f9fa;width: 200px;text-align: center;border: 1px solid #f7f9fa;" value='请依次点击"小""宝""贝"'><br>
 
                 <label>&nbsp;&nbsp;&nbsp;&nbsp;手机号：</label>
-                <input placeholder="6到18位数字字母组合"><br><br><br>
+                <input class="font_class" placeholder="11位手机号"><br><br>
 
+                <span class="span_class" style="color: #4cb5ff;">切换国际手机</span><br>
+                <span class="span_class">忘记密码时，可通过快速找回密码</span><br>
                 <label>短信验证码：</label>
-                <input class="font_class" placeholder="6到18位数字字母组合"><br><br><br>
+                <input class="font_class" style="width: 160px;" placeholder="输入短信验证码">
+                <input type="button" value="获取验证码" style="color: white;background: #4cb5ff; font-size: 16px;text-align: center; height: 48px; width: 130px; border: 1px solid #4cb5ff;outline: none;">
+                <br>
 
-                <input style="color: white;background: red;width: 200px;height: 44px;font-size: 16px;border: 1px solid red;text-align: center;outline: none;" value="注  册">
+            </div>
+            <div class="bottom_div">
+                <input style="color: white;background: red;width: 310px;height: 44px;font-size: 16px;border: 1px solid red;text-align: center;outline: none;" value="注  册">
+
             </div>
         </form>
     </div>
