--- a/Html/js/js函数.html
+++ b/Html/js/js函数.html
@@ -42,8 +42,24 @@
 
         // 函数参数调用和return
         function add(a, b) {
-            console.log(a + "+" + b + "=" + (a + b));
+            return a + b;
         }
+
+        var func = add;
+        sum = func(2, 3);
+        console.log(sum);
+
+        // 递归
+        function print(num) {
+            if (num == 10) {
+                return
+            }
+
+            console.log(num)
+            print(num + 1);
+        }
+        print(1)
+
     </script>
 </body>
 </html>
