--- a/Vue/生命周期/2.分析生命周期.html
+++ b/Vue/生命周期/2.分析生命周期.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>分析生命周期</title>
 		<!-- 引入Vue -->
-		<script type="text/javascript" src="../js/vue.js"></script>
+		<script type="text/javascript" src="../vue.js"></script>
 	</head>
 	<body>
 		<!-- 准备好一个容器-->
@@ -41,7 +41,7 @@
 				}
 			},
 			watch:{
-				n(){
+				n() {
 					console.log('n变了')
 				}
 			},
