--- a/ES6/Promise-then方法.html
+++ b/ES6/Promise-then方法.html
@@ -10,7 +10,7 @@
     <script>
         const p = new Promise((resolve, reject) => {
             setTimeout(()=>{
-                // resolve('用户数据')
+                resolve('用户数据')
                 reject('出错啦')
             },1000)
         })
