--- a/JS/6.2Array/迭代器方法.html
+++ b/JS/6.2Array/迭代器方法.html
@@ -8,20 +8,14 @@
 </head>
 <body>
   <script>
-    const a = ["foo", "bar", "baz", "qux"]
-
-    const aKeys = Array.from(a.keys())
-    const aValues = Array.from(a.values())
-    const aEntries = Array.from(a.entries())
-
-    console.log(aKeys)
-    console.log(aValues)
-    console.log(aEntries)
-
-    for (const [idx, element] of a.entries()) {
-      alert(idx)
-      alert(element)
+    function* generatorfn() {
+      yield
     }
+
+    let generatorObject = generatorfn()
+
+    console.log(generatorObject.next())
+    console.log(generatorObject.next())
 
   </script>
 </body>
