--- a/JS/面向对象编程/对象.html
+++ b/JS/面向对象编程/对象.html
@@ -8,20 +8,19 @@
 </head>
 <body>
   <script>
-    function Person () {}
+    class Person {
+      set name(newName) {
+        this.name_ = newName
+      }
 
-    Person.prototype.name = "Nocholas"
-    Person.prototype.age = 29
-    Person.prototype.job - "Software Engineer"
-    Person.prototype.sayName = function() {
-      console.log(this.name)
+      get name() {
+        return this.name_
+      }
     }
 
-    let person1 = new Person()
-    let person2 = new Person()
-
-    person1.sayName()
-    person2.sayName()
+    let p = new Person()
+    p.name = 'Jake'
+    console.log(p.name)
 
   </script>
 </body>
